# USTC_CODH_26_Lab6

./: Lab6_Report.md  README.md
COD25-Simulation-Framework/: .gitignore  CMakeLists.txt  README.md  instructions.md
COD25-Simulation-Framework/app/: main.cpp
COD25-Simulation-Framework/include/: argument.hpp  argument_generator.hpp  configs.hpp  dut.hpp  enums.hpp  golden.hpp  isa.hpp  operation.hpp  operators.hpp  simulator.hpp
COD25-Simulation-Framework/mem/: instr.ini
COD25-Simulation-Framework/vsrc/: top.v
COD25-Simulation-Framework/vsrc/configs/: BranchPredictor.v  CPU.v  CPU.v.orig  CPU.v.rej  CSA.v  Div.v  ForwardingUnit.v  HazardUnit.v  HazardUnit.v.orig  HazardUnit.v.rej  MemAdapter.v  cache.v  cache_LFU.v  configs.vh  mem_bram.v  regfile.v
COD25-Simulation-Framework/vsrc/mem_ip_sim/: data_mem.v  inst_mem.v
Task1/: M.md  Mul.v  mul_and_div.asm  mul_and_div.coe
Task3/: Cache.md  generate_tb.py
Task3/src/: cache.v  cache_FIFO.v  cache_Rand.v  cache_tb.v
Task4/: BRANCH_PREDICTOR_README.md  BranchPredictor.v  matrix_mul.asm  matrix_mul_data.coe  matrix_mul_inst.coe
src/: TOP.v
src/CPU/: BranchPredictor.v  CPU.v  CSA.v  Div.v  HazardUnit.v  Mul_33.v  Mul_wallace.v  regfile.v
src/PDU/: PDU.v
src/PDU/UART/: UART_RX.v  UART_TX.v
